--- a/index.html
+++ b/index.html
@@ -59,9 +59,12 @@
                 </div>
                 <div class="span5">
                     <p class="lead">
-                        GremlinJS is a framework independent library to build <strong><abbr title="Gremlins">reusable
-                        web components</abbr></strong> with Javascript.
+                        GremlinJS is a dependency-free library to build <strong><abbr title="Gremlins">reusable
+                        web components</abbr></strong> with Javascript. <br>
+                    </p>
+                    <p class="lead">
                         Gremlins are modular and flexible pieces of code describing the behaviour of dom elements.
+                        Don't waste your time managing dozens of dom queries, let GremlinJS handle that for you.
                     </p>
 
                 </div>
@@ -120,9 +123,9 @@
     <span class="muted">&lt;script src=&quot;js/gremlinjs.min.js&quot;&gt;&lt;/script&gt;   </span>
     <strong>&lt;script&gt;
         GremlinJS.define('Gizmo', function () {
-            this.el.innerHTML = '<strong>Hello World, Gizmo here!</strong>';
+        this.el.innerHTML = '<strong>Hello World, Gizmo here!</strong>';
         });
-    &lt;/script&gt;</strong>
+        &lt;/script&gt;</strong>
 &lt;/body&gt;
 </pre>
             </div>
