--- a/guides.html
+++ b/guides.html
@@ -8,7 +8,7 @@
 
 
     <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
-    <link rel="stylesheet" href="css/github.css"/>
+    <link rel="stylesheet" href="css/vibrant.css"/>
 
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
