--- a/guides.html
+++ b/guides.html
@@ -36,7 +36,7 @@
                         <a>Guides</a>
                     </li>
                     <li>
-                        <a href="#api">API</a>
+                        <a href="api/">API</a>
                     </li>
                 </ul>
             </div>
@@ -90,7 +90,7 @@
 
             <p>
                 Gremlins are found with a special data-attribute: <code>data-gremlin</code>. This happens
-                automatically whenever a dom element with this attribute is or becomes a child node of the dom.
+                automagically whenever a dom element with this attribute is or becomes a child node of the dom.
             </p>
 
             <p>
