--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             <a href="guides.html">Guides</a>
                         </li>
                         <li>
-                            <a href="api.html">API</a>
+                            <a href="api/">API</a>
                         </li>
                     </ul>
                 </div>
